Fix bubble overflow on right edge.

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -2262,7 +2262,7 @@ body .cal_hour_event .cal_event_block .time {
   width: 87px;
 }
 .cal_month .cal_event_pos_left a {
-  width: 92px;
+  width: 89px;
   left: 1px;
 }
 .cal_month .cal_event_pos_right a {
